# postgis_era5

./: .gitignore  generate_sicredi_norm.py  pyproject.toml  read.py
ingestion/: constants.py  implementation.py
migrations/: add_postgis_extension.py  add_spatial_index.py  create_db.py
postgis-era5/: pyproject.toml
postgis-era5/postgis_era5/: main.py
postgis-era5/tests/: test_postgis_era5.py
postgis_era5/: main.py  parsing.py  psql.py  read.py  table.py  types.py
scripts/: era5_to_postgis.py  filter_bbox.py  generate_bp_norm.py  generate_ecuador_historical.py  generate_ecuador_norm.py  generate_s_historical.py  generate_s_norm.py  generate_sicredi_historical.py  generate_sicredi_norm.py  ingest_ecuador.py  ingest_parana.py  ingest_parana_brazil.py  main.py  read.py
src/: config.py
src/ingestion/: constants.py  conversions.py  implementation.py
src/migrations/: add_postgis_extension.py  add_spatial_index.py  create_db.py
src/postgis_era5/: parsing.py  psql.py  table.py
